// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render common card 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root card"
  >
    <div
      class="MuiCardHeader-root"
      data-testid="card-header"
    >
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-headline MuiCardHeader-title card-title"
        >
          Test Card
        </span>
        
      </div>
    </div>
    <div
      class="MuiCardContent-root"
      data-testid="card-content"
    >
      This is a test
    </div>
  </div>
</div>
`;

exports[`render common card with footer actions 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root card"
  >
    <div
      class="MuiCardHeader-root"
      data-testid="card-header"
    >
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-headline MuiCardHeader-title card-title"
        >
          Test Card
        </span>
        
      </div>
    </div>
    <div
      class="MuiCardContent-root"
      data-testid="card-content"
    >
      This is a test
    </div>
    <div
      class="MuiCardActions-root"
      data-testid="card-actions"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat MuiCardActions-action footerActions"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Test Footer Action Button
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`render common card with header actions 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root card"
  >
    <div
      class="MuiCardHeader-root"
      data-testid="card-header"
    >
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-headline MuiCardHeader-title card-title"
        />
        
      </div>
      <div
        class="MuiCardHeader-action headerActions"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Test Header Action Button
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiCardContent-root"
      data-testid="card-content"
    >
      This is a test
    </div>
  </div>
</div>
`;

exports[`render common card with margin 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root card withMargin"
  >
    <div
      class="MuiCardHeader-root"
      data-testid="card-header"
    >
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-headline MuiCardHeader-title card-title"
        >
          Test Card
        </span>
        
      </div>
    </div>
    <div
      class="MuiCardContent-root"
      data-testid="card-content"
    >
      This is a test
    </div>
  </div>
</div>
`;

exports[`render common card without title or header actions 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root card"
  >
    <div
      class="MuiCardContent-root"
      data-testid="card-content"
    >
      This is a test
    </div>
  </div>
</div>
`;
